# widowx

widowx_controller/: CMakeLists.txt  package.xml
widowx_controller/scripts/: compute_dynamic_matreces_2link.py  compute_dynamic_matreces_2link_sim.py  widowx_PPC.py  widowx_PPC_sim.py  widowx_arm.py  widowx_compute_dynamics.py  widowx_cooperative_state_space_3links_adaptive.py  widowx_cooperative_state_space_3links_controller.py  widowx_cooperative_state_space_sim_3links_adaptive.py  widowx_cooperative_state_space_sim_3links_controller.py  windowx_PPC.py  windowx_PPC_sim.py  windowx_cooperative_state_space_3links_adaptive.py  windowx_cooperative_state_space_3links_controller.py  windowx_cooperative_state_space_sim_3links_adaptive.py  windowx_cooperative_state_space_sim_3links_controller.py
widowx_controller/scripts/old/: windowx_controller_3links.py  windowx_controller_sim_3links.py
widowx_controller/scripts/single arm/: widowx_state_space_controller_3links.py  widowx_state_space_sim_3links_controller.py
widowx_driver/: CMakeLists.txt  package.xml
widowx_driver/launch/: coop_driver.launch
widowx_driver/scripts/: servos_parameters.py  widowx_state_space_driver.py  windowx_state_space_driver.py  windowx_state_space_driver_internal_torque_controller.py
widowx_driver/scripts/old/: windowx_driver_test.py
widowx_driver/srv/: SecurityStop.srv
widowx_msgs/: CMakeLists.txt  package.xml
widowx_msgs/msg/: TargetConfiguration.msg
widowx_trajectory/: CMakeLists.txt  package.xml
widowx_trajectory/scripts/: widowx_coop_circle.py  windowx_coop_circle.py  windowx_sin.py  windowx_theta_slide.py
windowx_controller/: CMakeLists.txt  package.xml
windowx_controller/launch/: coop_PPC.launch
windowx_controller/scripts/: backup_state_space_matices.txt  test_time.py  windowx_PPC.py  windowx_PPC_sim.py  windowx_PPC_test.py  windowx_arm.py  windowx_cooperative_state_space_3links_adaptive.py  windowx_cooperative_state_space_3links_controller.py  windowx_cooperative_state_space_3links_controller_old.py  windowx_cooperative_state_space_3links_controller_virtual_object.py  windowx_cooperative_state_space_sim_3links_adaptive.py  windowx_cooperative_state_space_sim_3links_controller.py  windowx_cooperative_state_space_sim_new_dynamics_3links_controller.py  windowx_fake_cooperative_state_space_3links_controller.py  windowx_state_space_controller_3links.py
windowx_controller/scripts/old/: windowx_controller_2link.py  windowx_controller_sim_2link.py  windowx_cooperative_state_space_3links_controller_virtual_object.py  windowx_cooperative_state_space_sim_evobj_3links_controller.py
windowx_controller/scripts/single arm/: windowx_state_space_sim_3links_controller.py
windowx_driver/: CMakeLists.txt  package.xml
windowx_driver/launch/: coop_driver_internal_torques.launch  cooperative_driver.launch
windowx_driver/scripts/: servos_parameters.py  test_msg_hz.py  windowx_driver_2link.py  windowx_driver_3links.py  windowx_state_space_driver.py  windowx_state_space_driver_3links_r1.py  windowx_state_space_driver_3links_r2.py
windowx_msgs/: CMakeLists.txt  package.xml
windowx_trajectory/scripts/: windowx_coop_circle.py
